| Summary: | ASTERISK-28870: streams: One memory leak and one issue cloning streams | ||||
| Reporter: | George Joseph (gjoseph) | Labels: | |||
| Date Opened: | 2020-05-04 11:31:43 | Date Closed: | 2020-05-06 07:29:20 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Core/Streams | ||
| Versions: | GIT 16.10.0 17.4.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ||||
| Description: | ast_stream_topology_create_from_format_cap() was setting the stream->formats directly but not freeing the default formats. This causes a memory leak.
When cloning a stream, the source stream's format caps _pointer_ is copied to the new stream and it's reference count bumped. If either stream is sete to "removed", this will cause _both_ streams to have their format caps cleared. | ||||
| Comments: | By: Friendly Automation (friendly-automation) 2020-05-06 07:29:21.527-0500 Change 14387 merged by Friendly Automation: streams: Fix one memory leak and one formats ref issue [https://gerrit.asterisk.org/c/asterisk/+/14387|https://gerrit.asterisk.org/c/asterisk/+/14387] By: Friendly Automation (friendly-automation) 2020-05-06 07:30:48.025-0500 Change 14338 merged by Friendly Automation: streams: Fix one memory leak and one formats ref issue [https://gerrit.asterisk.org/c/asterisk/+/14338|https://gerrit.asterisk.org/c/asterisk/+/14338] By: Friendly Automation (friendly-automation) 2020-05-06 07:33:45.950-0500 Change 14388 merged by Joshua Colp: streams: Fix one memory leak and one formats ref issue [https://gerrit.asterisk.org/c/asterisk/+/14388|https://gerrit.asterisk.org/c/asterisk/+/14388] | ||||